--- a/package.json
+++ b/package.json
@@ -11,8 +11,17 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^20.4.0",
-    "react": "18.3.1",
-    "react-native": "0.75.1"
+    "@react-native-firebase/auth": "^20.4.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@types/react-native": "^0.73.0",
+    "@types/react-navigation": "^3.4.0",
+    "react": "^18.3.1",
+    "react-native": "^0.75.1",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -22,7 +31,7 @@
     "@react-native/eslint-config": "0.75.1",
     "@react-native/metro-config": "0.75.1",
     "@react-native/typescript-config": "0.75.1",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.3",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
